# ynix-api-core

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: ca7b654bc0a7_initial_core_schema.py
app/: main.py
app/bootstrap/: app.py  routes.py  services.py
app/config/: __init__.py  admin.py  app.py  database.py  maintenance.py  observability.py  runtime.py  security.py
app/core/: audit.py  base.py  config.py  constants.py  database.py  exceptions.py  logging.py  maintenance.py  middleware.py  migrations.py  modules.py  observers.py  pagination.py  responses.py  security.py
app/jobs/: __init__.py  base.py  example_job.py
app/queue/: __init__.py  connection.py  dispatcher.py  jobs.py  worker.py
app/scheduler/: kernel.py  tasks.py
app/sdk/: __init__.py  generator.py
app/shared/: dependencies.py  helpers.py  permissions.py  types.py  validators.py
console/: kernel.py  manage.py  manager.py
console/commands/: create_admin.py  make_controller.py  make_migration.py  make_model.py  make_module.py  make_observer.py  make_repository.py  make_request.py  make_schema.py  make_service.py  (+10 more)
tests/: conftest.py  test_admin.py  test_api_integration_real.py  test_api_keys.py  test_config.py  test_console_artisan.py  test_console_kernel.py  test_console_make_model.py  test_example.py  test_health.py  test_migrations.py  test_model_metadata.py  test_observability.py  test_observers.py  test_permissions.py  test_queue.py  test_responses.py
(+215 files in other folders)
