[project]
name = "ynix-fastapi-core"
version = "1.0.0"
description = "Core modular FastAPI para APIs Ynix"
requires-python = ">=3.12"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
